--- a/.github/workflows/generate_materials.yml
+++ b/.github/workflows/generate_materials.yml
@@ -9,7 +9,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "main" ]
-    paths: ['Prompts/**']
+    paths: ['Prompts/**', 'Weekly_Emails/Email_Text/**']
     
   #pull_request:
   #  branches: [ "main" ]
